logs-ubuntu-latest-fail/latest_build/rqt_gui_cpp/stdout_stderr.log
Not searching for unused variables given on the command line.
-- The C compiler identification is GNU 14.3.0
-- The CXX compiler identification is GNU 14.3.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/bin/x86_64-conda-linux-gnu-cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/bin/x86_64-conda-linux-gnu-c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 2.8.6 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/ament_cmake/cmake)
-- Found pluginlib: 5.8.4 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/pluginlib/cmake)
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Failed
-- Check if compiler accepts -pthread
-- Check if compiler accepts -pthread - yes
-- Found Threads: TRUE
-- Performing Test HAVE_STDATOMIC
-- Performing Test HAVE_STDATOMIC - Success
-- Found WrapAtomic: TRUE
-- Found OpenGL: /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/lib/libGL.so
-- Found WrapOpenGL: TRUE
-- Found XKB: /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/lib/libxkbcommon.so (found suitable version "1.13.1", minimum required is "0.5.0")
-- Could NOT find WrapVulkanHeaders (missing: Vulkan_INCLUDE_DIR) 
-- Found rclcpp: 31.0.1 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/rclcpp/cmake)
-- Found rosidl_generator_c: 5.1.3 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 5.1.3 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.9.1 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 9.4.5 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found qt_gui_cpp: 2.10.3 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/qt_gui_cpp/cmake)
-- Found ament_lint_auto: 0.20.3 (/home/runner/work/pixi_rosdistro/pixi_rosdistro/install/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: $<BUILD_INTERFACE:/home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros-visualization/rqt/rqt_gui_cpp/include>
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done (3.2s)
-- Generating done (0.1s)
-- Build files have been written to: /home/runner/work/pixi_rosdistro/pixi_rosdistro/build/rqt_gui_cpp
[1/5] Automatic MOC for target rqt_gui_cpp
[2/5] Building CXX object CMakeFiles/rqt_gui_cpp.dir/rqt_gui_cpp_autogen/mocs_compilation.cpp.o
[3/5] Building CXX object CMakeFiles/rqt_gui_cpp.dir/src/rqt_gui_cpp/nodelet_plugin_provider.cpp.o
FAILED: [code=1] CMakeFiles/rqt_gui_cpp.dir/src/rqt_gui_cpp/nodelet_plugin_provider.cpp.o 
sccache /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/bin/x86_64-conda-linux-gnu-c++ -DDEFAULT_RMW_IMPLEMENTATION=rmw_fastrtps_cpp -DFASTCDR_DYN_LINK -DQT_CORE_LIB -DQT_GUI_LIB -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DRCUTILS_ENABLE_FAULT_INJECTION -DTINYXML2_IMPORT -D_FILE_OFFSET_BITS=64 -Drqt_gui_cpp_EXPORTS -I/home/runner/work/pixi_rosdistro/pixi_rosdistro/build/rqt_gui_cpp -I/home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros-visualization/rqt/rqt_gui_cpp -I/home/runner/work/pixi_rosdistro/pixi_rosdistro/build/rqt_gui_cpp/rqt_gui_cpp_autogen/include -I/home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros-visualization/rqt/rqt_gui_cpp/include -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/qt_gui_cpp -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/include/qt6/QtWidgets -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/include/qt6 -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/include/qt6/QtCore -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/lib/qt6/mkspecs/linux-g++ -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/include/qt6/QtGui -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/pluginlib -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/ament_index_cpp -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/class_loader -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rcpputils -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rcutils -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rclcpp -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/builtin_interfaces -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_runtime_c -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_typesupport_interface -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_runtime_cpp -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_typesupport_fastrtps_cpp -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rmw -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_dynamic_typesupport -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_typesupport_fastrtps_c -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_typesupport_introspection_c -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_typesupport_introspection_cpp -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/libstatistics_collector -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rcl -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rcl_interfaces -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/service_msgs -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rcl_logging_interface -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rcl_yaml_param_parser -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/type_description_interfaces -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/statistics_msgs -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosgraph_msgs -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_typesupport_cpp -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/rosidl_typesupport_c -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/install/include/tracetools -fvisibility-inlines-hidden -fmessage-length=0 -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/runner/work/pixi_rosdistro/pixi_rosdistro/.pixi/envs/default/include -O3 -DNDEBUG -std=gnu++17 -fPIC -Wall -Wextra -Wpedantic -fPIC -pthread -MD -MT CMakeFiles/rqt_gui_cpp.dir/src/rqt_gui_cpp/nodelet_plugin_provider.cpp.o -MF CMakeFiles/rqt_gui_cpp.dir/src/rqt_gui_cpp/nodelet_plugin_provider.cpp.o.d -o CMakeFiles/rqt_gui_cpp.dir/src/rqt_gui_cpp/nodelet_plugin_provider.cpp.o -c /home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros-visualization/rqt/rqt_gui_cpp/src/rqt_gui_cpp/nodelet_plugin_provider.cpp
/home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros-visualization/rqt/rqt_gui_cpp/src/rqt_gui_cpp/nodelet_plugin_provider.cpp: In member function 'void rqt_gui_cpp::NodeletPluginProvider::init_loader()':
/home/runner/work/pixi_rosdistro/pixi_rosdistro/src/ros-visualization/rqt/rqt_gui_cpp/src/rqt_gui_cpp/nodelet_plugin_provider.cpp:87:13: error: 'getpid' was not declared in this scope; did you mean 'getpt'?
   87 |     name << getpid();
      |             ^~~~~~
      |             getpt
ninja: build stopped: subcommand failed.
